samples/_failures_safe/1761704961_67cf91_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_08e017e1.c: In function ‘main’:
./samples/SAFE/__tmp_08e017e1.c:136:12: error: missing terminating " character
  136 |     printf("%-20
      |            ^~~~~
./samples/SAFE/__tmp_08e017e1.c:136:5: error: expected expression at end of input
  136 |     printf("%-20
      |     ^~~~~~
./samples/SAFE/__tmp_08e017e1.c:136:5: error: expected declaration or statement at end of input
